alignment issue

--- a/frontend/src/assets/css/index.scss
+++ b/frontend/src/assets/css/index.scss
@@ -362,7 +362,7 @@ $xlarge-down: "only screen and (max-width : 1439px)" !default;
         }
 
         .left-panel {
-          flex: 1 1 400px;
+          flex: 1 1 380px;
         }
 
         .right-panel {
